<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Platzigram</string>
    <string name="hint_userName">Usuario</string>
    <string name="hint_Mail">Correo</string>
    <string name="hint_Name">Nombre</string>
    <string name="text_btnLogin">Iniciar Sesion</string>
    <string name="text_doNotHaveAccount">No tienes una cuenta?</string>
    <string name="text_createAccountNow"><u>Crea una ahora!</u></string>
    <string name="text_createAccount"><u>Crear cuenta</u></string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="title_activity_picture_detail">PictureDetailActivity</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmPassword">Confirmar Password</string>
    <string name="text_cancel">Cancelar</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Inicio</string>
    <string name="tab_profile">Perfil</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>

    <string name="action_settings">Configuración</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clientCarView_txtUserName_sample">Asahi Cantú</string>
    <string name="secondword_detail">Me Gusta</string>
    <string name="titleimagedetail">\"Todo copas en la playa\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="clientCarView_txtCreation_sample">Hace 3 dias</string>
    <string name="clientCarView_txtLke_sample">100 Me Gusta</string>
    <string name="transition_picture">transitionPicture</string>
    <string name="signOut">Cerrar sesión</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="error">Error message goes here</string>
    <string name="message_userNameNotFoud">Usuario no encontrado</string>
    <string name="message_userNameOrPasswordNull">El nombre de usuario o password no pueden estar vacios</string>
    <string name="message_cameraNotAvailable">La camara no esta disponible</string>
    <string name="message_title">Titulo</string>
    <string name="message_description">Descripcion</string>
    <string name="createPost">Crear Posrt!</string>
    <string name="message_request_camera">Requiere uso de camara</string>
    <string name="message_function_not_available">Funcion de camara no disponible, permisos denegados</string>
    <string name="message_passwordMismatch">Los campos password no coincden</string>
    <string name="message_wrongOrEmptyPassword">Password no puede estar vacío</string>
    <string name="message_emptyUserName">Nombre de usuario no puede estar vacío</string>
    <string name="message_emptyMail">email no puede estar vacío</string>
    <string name="message_emptyPassword">Contraseña no puede estar vacía</string>
    <string name="message_emptyConfirmPassword">Confirmar Contraseña no puede estar vacía</string>
    <string name="message_userCreateSuccess">Usuario creado! Iniciando sesion...  </string>
    <string name="message_login_success">Bienvenido!</string>
    <string name="title_activity_maps">Map</string>
    <string name="myLocation">Mi ubicacion</string>
    <string name="nav_my_location">Mi ubicacion</string>
    <string name="message_noNetworkAvailable">Red no disponible</string>
    <string name="preferences_loggedInUser">USER</string>


</resources>
