<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardView_height"
    android:layout_marginLeft="@dimen/cardViewLike_horizontalMargin"
    android:layout_marginRight="@dimen/cardViewLike_horizontalMargin"
    android:layout_marginTop="@dimen/cardViewLike_marginTop"
    android:elevation="@dimen/cardview_default_elevation"
    cardView:cardCornerRadius="@dimen/cardView_cornerRadius">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgUSer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/image"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_picture" />
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/CardBackground"
            android:orientation="vertical"
            android:padding="@dimen/textContentDetail_padding_horizontal">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clientCarView_txtUserName_sample"
                android:theme="@style/CardViewUserName"
                />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtCreation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clientCarView_txtCreation_sample"
                android:theme="@style/CardViewCreation"

                />
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/chkLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/like_checkbox_selector" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/cardViewLike_horizontalMargin"
                    android:text="@string/clientCarView_txtLke_sample"
                    android:theme="@style/CardViewLike"
                    />
            </android.support.v7.widget.LinearLayoutCompat>


        </android.support.v7.widget.LinearLayoutCompat>

    </FrameLayout>
</android.support.v7.widget.CardView>
